// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 on creation 1`] = `
Array [
  Array [
    "Adding new deployment template for:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deauth on 401 on list 1`] = `
Array [
  Array [
    "Listing deployment templates for:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should install new template 1`] = `
Array [
  Array [
    "Adding new deployment template for:",
    "http://localhost:8080",
  ],
]
`;

exports[`Should list templates 1`] = `
Array [
  Array [
    "Listing deployment templates for:",
    "http://localhost:8080",
  ],
  Array [
    "2 templates found on http://localhost:8080:
",
  ],
  Array [
    "   Template            Version   
   template            ^0.0.1    
   otherTemplate       ^1.0.0    ",
  ],
]
`;

exports[`Should list zero templates 1`] = `
Array [
  Array [
    "Listing deployment templates for:",
    "http://localhost:8080",
  ],
  Array [
    "0 templates found on http://localhost:8080:
",
  ],
  Array [
    "   Template       Version   ",
  ],
]
`;

exports[`Should remove template 1`] = `
Array [
  Array [
    "Removing deployment template for:",
    "http://localhost:8080",
  ],
  Array [
    "Template successfully removed!",
  ],
]
`;
